# ML_hodgepodge

./: README.md  pyproject.toml
models/: model__Hp_optimization_NN_Keras.keras  model__Inverse_design_with_NN_Keras.keras  model__Training_NN_Keras.keras
notebook/: Hp_optimization_NN_Keras.ipynb  Inverse_design_with_NN_Keras.ipynb  Training_NN_Keras.ipynb
notebook/KerasTuner/: oracle.json
notebook/KerasTuner/trial_00/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_01/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_02/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_03/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_04/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_05/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_06/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_07/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_08/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_09/: checkpoint.weights.h5  trial.json
notebook/KerasTuner/trial_10/: checkpoint.weights.h5  trial.json
